--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -5,7 +5,7 @@ on:
     branches: [dev]
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
@@ -41,4 +41,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           publish_branch: gh-pages-dev
+          force_orphan: true
           commit_message: 'Deploy to development from dev branch'
